# openmit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  bootstrap.sh.backup  build.sh  build_deps.sh  env.conf  test.sh  tracker  tracker.cc  tracker.h
conf/: base.conf  deps_version.conf
doc/: build.md
doc/architecture/: parameter_server.md
doc/tutorials/: parameter_interpretation.md
docs/: build.md
docs/architecture/: mpi_and_admm.md
docs/tutorials/: parameter_interpretation.md
example/: mit_mpi.conf  mit_mpi.sh  mit_ps.conf  mit_ps.sh  mit_ps_mf.conf  mit_ps_mf.sh  openmit.conf  pre_test_lr.conf  pre_test_lr.sh  pre_test_mmf.conf  pre_test_mmf.sh
example/data/: model_dump.admm
example/data/libfm/: test.txt  train.txt
example/data/libmf/: mf.txt  mf.txt.e1  mf.txt.e2
example/data/model_out/model_binary.libfm/last/: part-0
example/data/model_out/model_binary.libmf/last/: item-part-0  user-part-0
example/data/model_out/model_binary/last/: part-0
example/data/model_out/model_dump/: part-0
example/data/model_out/model_dump.libfm/: part-0
example/data/model_out/model_dump.libmf/: item-part-0  user-part-0
example/data/tools/dstore/: binary.lr  text_map.lr
example/distributed-running/: env_yarn.sh  run_yarn.sh  run_yarn_ps.sh
examples/: mit_admm.conf  mit_admm.sh  mit_mpi.conf  mit_mpi.sh  mit_ps.conf  mit_ps.sh
examples/data/: model_dump.admm
examples/data/dstore/: bitable.model
examples/data/libfm/: train.txt
jvm-packages/: README.md
jvm-packages/org/openmit/entry/: EntryMeta.java  EntryMetaOrBuilder.java  EntryMetaProtos.java  FieldIdArray.java  FieldIdArrayOrBuilder.java
make/: config.mk  openmit.mk
openmit/: CMakeLists.txt  cli_main.cc  cli_main.cc.bak  learner.cc  learner.h  tracker_test.cc  transaction_test.cc
openmit/bak/model/mpimodel/: mpi_ffm.h  mpi_linear_reg.h
openmit/bak/model/psmodel/: ps_model.cc  ps_model.h
openmit/common/: arg.h  base.h  data.h  parameter.h  type.h
openmit/common/data/: data.h  data_test.cc
openmit/common/parameter/: admm_param.cc  admm_param.h  cli_param.cc  cli_param.h  model_param.h  optimizer_param.cc  optimizer_param.h  parameter.cc  parameter.h  register.cc
openmit/engine/: trainer.cc  trainer.h  updater.cc  updater.h
openmit/entity/: entry.cc  entry.h  entry_meta.cc  entry_meta.h  entry_meta_test.cc  entry_test.cc  unit.h
openmit/entity/old/: unit_test.cc
openmit/entry/: entry.cc  entry.h  entry_ffm.h  entry_fm.h  entry_lr.h  entry_meta.cc  entry_meta.h  entry_meta.proto  entry_meta_test.cc  entry_mf.h  entry_test.cc
openmit/executor/: predictor.h  trainer.cc  trainer.h
openmit/framework/: admm.cc  admm.h  ps.cc  ps.h  scheduler.cc  scheduler.h  server.cc  server.h  signal.h  worker.cc  worker.h
openmit/framework/admm/: admm.cc  admm.h  mpi_server.cc  mpi_server.h  mpi_worker.cc  mpi_worker.h
openmit/framework/mpi/: admm.cc  admm.h  mpi_admm.cc  server.cc  server.h  worker.cc  worker.h
openmit/framework/ps/: parameter_server.cc  parameter_server.h  ps.cc  ps.h  scheduler.cc  scheduler.h  server.cc  server.h  signal.h  worker.cc  worker.h
openmit/learner/: mi_learner.cc  mi_learner.h
openmit/loss/: loss.cc  loss.h
openmit/metric/: mean_square_metric.h  meansquare_metric.h  metric.cc  metric.h  pointwise_metric.h  rank_metric.h
openmit/model/: .mf.cc.swp  1  README.md  ffm.cc  ffm.h  fm.cc  fm.h  linear_reg.cc  linear_reg.h  lr.cc  lr.h  mf.cc  mf.h  model.cc  model.h  psmodel.cc  psmodel.h
openmit/model/mpimodel/: mpi_linear_reg.cc  mpi_model.h
openmit/model/psmodel/: ps_ffm.cc
openmit/model_gpu/: README.md
openmit/models/: factorization_machine.cc  factorization_machine.h  ffm.cc  ffm.h  fieldaware_factorization_machine.cc  fieldaware_factorization_machine.h  fm.cc  fm.h  logistic_regression.cc  logistic_regression.h  lr.cc  lr.h  mf.cc  mf.h  model.cc  model.h
openmit/models/old/: factorization_machine.cc  fieldaware_factorization_machine.cc  fieldaware_factorization_machine.h
openmit/objective/: objective.h
openmit/old/model/: README.md  fm.cc  fm.h  linear_reg.cc  linear_reg.h  psmodel.cc
openmit/old/mpi/: mpi_admm.h  server.cc  server.h  worker.h
openmit/optimizer/: .optimizer.h.swp  adadelta.h  adagrad.cc  adagrad.h  adam.h  als.h  ftml.h  ftrl.cc  ftrl.h  gd.cc  gd.h  lbfgs.h  lbfgs.h.bak  optimizer.cc  optimizer.h  rmsprop.h  sgd.h
openmit/optimizer/old/: adadelta.h  adagrad.h  adam.h  ftrl.h  rmsprop.h
openmit/protobuf/: exp.proto
openmit/tools/dstore/: CMakeLists.txt  bimodel.cc  bimodel.h  bitable.h  bitable_test.cc  ffm_table.h  ffm_table_test.cc  model_table.h
openmit/tools/dstruct/: dstring.h  dstring_test.cc  sarray.h  threadsafe_map.h  threadsafe_map_test.cc
openmit/tools/hash/: murmur3.cc  murmur3.h  murmur3_test.cc
openmit/tools/io/: file.h  file_test.cc  io_example.txt  read.cc  read.h  read_test.cc  write.cc  write.h  write_test.cc
openmit/tools/math/: basic_formula.h  formula.h  prob_distr.cc  prob_distr.h  random.cc  random.h
openmit/tools/monitor/: transaction.cc  transaction.h  transaction_test.cc
openmit/tools/profiler/: README.md  timer_stats.h
openmit/tools/thread/: readme.md  thread_pool.h  thread_pool_test.cc
openmit/tools/util/: timer.h  timer_test.cc  type_conversion.h  type_conversion_test.cc
python-package/: README.md  entry_meta_pb2.py  exp_pb2.py  exp_pb2_test.py
python-package/protobuf/: exp_pb2.py
tools/: CMakeLists.txt  compile_proto.sh  sse_test.cc
tools/grpc/: CMakeLists.txt  compile_pb_for_grpc.sh  greeter_client.cc  greeter_server.cc  grpc_env.sh
tools/grpc/helloworld/: helloworld.proto  helloworld.proto.old
